<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/title_library"
    app:startDestination="@id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.jerryjspringer.musicapp.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_artistFragment"
            app:destination="@id/artistFragment" />
    </fragment>

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.jerryjspringer.musicapp.ui.playlist.PlaylistFragment"
        android:label="@string/title_playlist"
        tools:layout="@layout/fragment_playlist" />

    <fragment
        android:id="@+id/artistFragment"
        android:name="com.jerryjspringer.musicapp.ui.artist.ArtistFragment"
        android:label="@string/title_artist"
        tools:layout="@layout/fragment_artist" >
        <argument
            android:name="artist"
            app:argType="string" />
        <action
            android:id="@+id/action_artistFragment_to_songFragment"
            app:destination="@id/songFragment" />
    </fragment>

    <fragment
        android:id="@+id/songFragment"
        android:name="com.jerryjspringer.musicapp.ui.song.SongFragment"
        android:label="@string/title_song"
        tools:layout="@layout/fragment_song" >
    </fragment>
</navigation>